--- a/package.json
+++ b/package.json
@@ -26,5 +26,16 @@
   "dependencies": {
     "axios": "^1.3.6",
     "qs": "^6.11.1"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/etenlab/sso.git"
+  },
+  "bugs": {
+    "url": "https://github.com/etenlab/sso/issues"
+  },
+  "homepage": "https://github.com/etenlab/sso#readme"
 }
