--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@eten-lab/sso",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "description": "keycloak authentication and authorization",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
