--- a/.github/workflows/main.dev.yml
+++ b/.github/workflows/main.dev.yml
@@ -41,7 +41,7 @@ jobs:
           echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}' > .npmrc
           cat .npmrc
       - run: npm install
-      - run: npm publish
+      - run: npm publish --access=public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
