--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eten-lab/sso",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "keycloak authentication and authorization",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
@@ -14,6 +14,7 @@
   "author": "Aslam",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.2.3",
     "@types/qs": "^6.9.7",
     "@types/react": "^18.0.37",
     "typescript": "^5.0.4"
@@ -24,7 +25,8 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
-    "qs": "^6.11.1"
+    "qs": "^6.11.1",
+    "roarr": "^7.15.0"
   },
   "directories": {
     "lib": "lib"
