--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "noImplicitThis": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
   },
   "include": ["src/**/*.ts*"],
   "exclude": ["src/**/__tests__/**/*"]
